# evaluator_result_parser

./: CLAUDE.md  README.md  analiys_jsonl_res.py  analize_covariance.py  batch_visualize.py  downloader.py  pyproject.toml  serve.sh  setup.sh  setup_and_serve.sh  test_canvas.py  visualize_by_uuid.py
result_parser/: __init__.py  jsonl_parser.py  metrics_visualizer.py
t4_visualizer/: __init__.py  batch.py  downloader.py  inspect.py  server.py  visualize.py
