[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "evaluator-result-parser"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "Pillow",
]

[project.scripts]
t4-batch = "t4_visualizer.batch:main"
t4-visualize = "t4_visualizer.visualize:main"
t4-inspect = "t4_visualizer.inspect:main"
t4-cache = "t4_visualizer.downloader:cache_main"
t4-multi = "t4_visualizer.batch:multi_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["t4_visualizer*", "result_parser*"]
